<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:Android="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:paddingLeft="@dimen/activity_horizontal_margin"
    android:paddingRight="@dimen/activity_horizontal_margin"
    android:paddingTop="@dimen/activity_vertical_margin"
    android:paddingBottom="@dimen/activity_vertical_margin"
    android:orientation="vertical"
    tools:context=".MyActivity"
    android:background="@drawable/main_background"
    android:weightSum="1"
    android:gravity="center_horizontal">


    <Button
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:text="@string/immediately"
        android:id="@+id/immediately"
        android:background="@android:drawable/picture_frame"
        android:layout_marginBottom="3dp"/>

    <Button
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:text="@string/change_flower"
        android:id="@+id/change_flower"
        android:background="@android:drawable/picture_frame"
        android:layout_marginBottom="3dp"
        android:gravity="center|center_horizontal" />

    <Button
        android:layout_width="349dp"
        android:layout_height="wrap_content"
        android:text="@string/setting"
        android:id="@+id/setting"
        android:background="@android:drawable/picture_frame"
        />


    <LinearLayout
        android:orientation="horizontal"
        android:layout_width="match_parent"
        android:layout_height="175dp"
        android:weightSum="1"
        android:id="@+id/layout"
        android:layout_marginTop="30dp">

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:id="@+id/la"
            android:weightSum="1"
            android:layout_weight="1.28">

            <TextView
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:text="Photo"
                android:id="@+id/textView3"
                android:gravity="center_horizontal"
                android:textStyle="bold"
                android:paddingTop="@dimen/activity_vertical_margin"/>

            <ImageView
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:id="@+id/photo"
                android:src="@drawable/ic_launcher" />

        </LinearLayout>

        <LinearLayout
            android:orientation="vertical"
            android:layout_width="wrap_content"
            android:layout_height="match_parent"
            android:layout_gravity="center_vertical">

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="261dp"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:paddingTop="@dimen/activity_vertical_margin">

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    >
                <ImageView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/imageView"
                    android:src="@mipmap/ic_launcher"
                    android:paddingLeft="@dimen/activity_horizontal_margin"/>
                <TextView
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="目前設定"
                    android:id="@+id/textView"
                    android:textColor="#2a7363"
                    android:textSize="16dp"
                    android:textStyle="bold"
                    android:paddingTop="0dp"
                    android:paddingLeft="8dp"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    android:layout_gravity="center_vertical"
                    android:gravity="center_vertical">

                    <TextView
                        android:layout_width="106dp"
                        android:layout_height="45dp"
                        android:text="碩取資料。。"
                        android:id="@+id/setting_status_value"
                        android:textColor="#3e5f73"
                        android:textSize="20dp"
                        android:paddingLeft="@dimen/activity_horizontal_margin"
                        android:layout_gravity="center_vertical" />

                </LinearLayout>
            </LinearLayout>

            <LinearLayout
                android:orientation="horizontal"
                android:layout_width="263dp"
                android:layout_height="82dp"
                android:layout_gravity="center_horizontal"
                android:paddingTop="@dimen/activity_vertical_margin">
                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    >
                    <ImageView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:id="@+id/imageView2"
                        android:src="@mipmap/ic_launcher"
                        android:paddingLeft="@dimen/activity_horizontal_margin"/>
                    <TextView
                        android:layout_width="wrap_content"
                        android:layout_height="wrap_content"
                        android:text="花種設定"
                        android:id="@+id/textView2"
                        android:textColor="#2a7363"
                        android:textSize="16dp"
                        android:textStyle="bold"
                        android:paddingTop="0dp"
                        android:paddingLeft="8dp"/>
                </LinearLayout>

                <LinearLayout
                    android:orientation="vertical"
                    android:layout_width="wrap_content"
                    android:layout_height="match_parent"
                    >

                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="環境溫度:"
                            android:id="@+id/evn_temperature"
                            android:textColor="#2a7363"
                            android:textSize="15dp"
                            android:paddingLeft="@dimen/activity_horizontal_margin" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="碩取資料。。"
                            android:id="@+id/evn_temperature_value"
                            android:textColor="#3e5f73"
                            android:textSize="15dp"
                            android:paddingLeft="@dimen/activity_horizontal_margin" />
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content"
                        >
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="空氣濕度:"
                            android:id="@+id/air_water"
                            android:textColor="#2a7363"
                            android:textSize="15dp"
                            android:paddingLeft="@dimen/activity_horizontal_margin" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="碩取資料。。"
                            android:id="@+id/air_water_value"
                            android:textColor="#3e5f73"
                            android:textSize="15dp"
                            android:paddingLeft="@dimen/activity_horizontal_margin" />
                    </LinearLayout>
                    <LinearLayout
                        android:orientation="horizontal"
                        android:layout_width="match_parent"
                        android:layout_height="wrap_content">
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="土壤濕度:"
                            android:id="@+id/soil_water"
                            android:textColor="#2a7363"
                            android:textSize="15dp"
                            android:paddingLeft="@dimen/activity_horizontal_margin" />
                        <TextView
                            android:layout_width="wrap_content"
                            android:layout_height="wrap_content"
                            android:text="碩取資料。。"
                            android:id="@+id/soil_water_value"
                            android:textColor="#3e5f73"
                            android:textSize="15dp"
                            android:paddingLeft="@dimen/activity_horizontal_margin" />
                    </LinearLayout>
                </LinearLayout>
            </LinearLayout>
        </LinearLayout>

    </LinearLayout>



        <Button
            android:layout_width="349dp"
            android:layout_height="wrap_content"
            android:text="@string/diary"
            android:id="@+id/diary"
            android:background="@android:drawable/picture_frame"
            android:layout_marginBottom="8dp"
            android:layout_marginTop="20dp"/>
             />

        <Button
            android:layout_width="349dp"
            android:layout_height="wrap_content"
            android:text="@string/dictionary"
            android:id="@+id/dictionary"
            android:background="@android:drawable/picture_frame"
             />


</LinearLayout>
